--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-Project/Stupidoc.pdf
-
-app/node_modules/
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
 
 # testing
 /coverage
@@ -11,7 +13,11 @@ app/node_modules/
 
 # misc
 .DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-app/npm-debug.log*
-app/yarn-debug.log*
-app/yarn-error.log*
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
