--- a/.gitignore
+++ b/.gitignore
@@ -2,14 +2,18 @@
 
 # dependencies
 /node_modules
+/app/node_modules
+
 /.pnp
 .pnp.js
 
 # testing
 /coverage
+/app/coverage
 
 # production
 /build
+/app/build
 
 # misc
 .DS_Store
