--- a/app/package.json
+++ b/app/package.json
@@ -5,10 +5,13 @@
   "dependencies": {
     "ace": "^1.3.0",
     "ace-builds": "^1.4.7",
+    "lodash": "^4.17.15",
+    "re-resizable": "^6.1.1",
     "react": "^16.12.0",
     "react-ace": "^8.0.0",
     "react-canvas-nest": "^1.0.10",
     "react-dom": "^16.12.0",
+    "react-grid-layout": "^0.17.1",
     "react-markdown": "^4.2.2",
     "react-pdf": "^4.1.0",
     "react-pdf-js": "^5.1.0",
