--- a/app/package.json
+++ b/app/package.json
@@ -1,23 +1,22 @@
 {
-  "name": "app",
+  "name": "nt",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "ace": "^1.3.0",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.4.0",
+    "@testing-library/user-event": "^7.2.1",
     "ace-builds": "^1.4.7",
-    "lodash": "^4.17.15",
-    "re-resizable": "^6.1.1",
+    "antd": "^3.26.4",
     "react": "^16.12.0",
     "react-ace": "^8.0.0",
     "react-canvas-nest": "^1.0.10",
     "react-dom": "^16.12.0",
-    "react-grid-layout": "^0.17.1",
     "react-markdown": "^4.2.2",
-    "react-pdf": "^4.1.0",
-    "react-pdf-js": "^5.1.0",
     "react-resizable": "^1.10.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.3.0",
+    "store": "^2.0.12"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -25,7 +24,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://127.0.0.1:8080",
+  "proxy": "http://localhost:8080",
   "eslintConfig": {
     "extends": "react-app"
   },
