--- a/app/package.json
+++ b/app/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.2.1",
     "ace-builds": "^1.4.7",
     "antd": "^3.26.4",
+    "copy-to-clipboard": "^3.2.0",
     "react": "^16.12.0",
     "react-ace": "^8.0.0",
     "react-canvas-nest": "^1.0.10",
